# cmi

./: .gitignore  README.md  docker-compose.yml  mongo-keyfile
.github/workflows/: release.yml
backup/CMI/: areas.bson  areas.metadata.json  card.chunks.metadata.json  card.files.bson  card.files.metadata.json  cards.bson  cards.metadata.json  categories.bson  categories.metadata.json  cities.bson  cities.metadata.json  classifications.bson  classifications.metadata.json  countries.bson  countries.metadata.json  departments.bson  departments.metadata.json  participants.bson  participants.metadata.json  projects.bson  projects.metadata.json  users.bson  users.metadata.json
cmi-app/: .gitignore  README.md  package.json
cmi-app/scripts/: build-frontend.js  fetch-cloudflared.sh  fetch-node.sh
cmi-app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
cmi-app/src-tauri/capabilities/: default.json
cmi-app/src-tauri/icons/: icon.icns
cmi-app/src-tauri/src/: backend.rs  lib.rs  main.rs  tunnel.rs
cmi-back/: .env  .gitignore  .prod.env  Dockerfile  README.md  package-lock.json  package.json
cmi-back/data/: cmi.db-shm  cmi.db-wal
cmi-back/public/: 3rdpartylicenses.txt  index.html  main.037d975bc22008d5.js  polyfills.4fc83bdc59c928a7.js  runtime.1b6b907e3c543a3d.js  styles.53c5e91cf21ca4b6.css
cmi-back/src/: index.js
cmi-back/src/config/: env.js  geo-data.js  log.js
cmi-front/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
cmi-front/src/: index.html  styles.scss
mongo-init/: restore.sh
(+97 files in other folders)
