[package]
name = "cmi-app"
version = "0.1.0"
description = "CMI desktop application"
authors = ["Klariff"]
edition = "2021"

[lib]
name = "cmi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
